--- a/app/src/main/res/layout/activity_choose_difficulty.xml
+++ b/app/src/main/res/layout/activity_choose_difficulty.xml
@@ -15,44 +15,44 @@
         android:layout_marginEnd="65dp"
         android:layout_marginBottom="60dp"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/start_button"
+        app:layout_constraintBottom_toTopOf="@id/easy_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/start_button"
+        android:id="@+id/easy_button"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
-        android:text="Bắt đầu"
+        android:layout_marginTop="100dp"
+        android:text="Dễ"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo_image" />
 
     <Button
-        android:id="@+id/achievements_button"
+        android:id="@+id/medium_button"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Thành tích"
+        android:layout_marginTop="12dp"
+        android:text="Trung bình"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/start_button" />
+        app:layout_constraintTop_toBottomOf="@id/easy_button" />
 
     <Button
-        android:id="@+id/exit_button"
+        android:id="@+id/hard_button"
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:text="Thoát"
+        android:text="Khó"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/achievements_button" />
+        app:layout_constraintTop_toBottomOf="@id/medium_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
