--- a/app/src/main/res/layout/activity_save_achievement.xml
+++ b/app/src/main/res/layout/activity_save_achievement.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8CB87"
-    tools:context=".SaveAchievement">
+    tools:context=".SaveAchievementActivity">
 
     <ImageView
         android:id="@+id/logo_image"
